external-crates/move/crates/move-compiler/tests/move_check/parser/ability_modifier_postfix_with_semi.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/parser/ability_modifier_postfix_with_semi.move:4:19
  │
4 │     struct Foo {} has store;
  │                   ^^^ Postfix abilities are not supported by current edition 'legacy'; the '2024' edition supports this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.
